# GenerativeAI-Projects

./: .gitignore  README.md
LangChain-Exercise/: langchain_fundamentals_2.ipynb
LangChain-Exercises/: langchain_fundamentals_1.ipynb
LangGraph-Exercises/: README.md  langgraph_fundamentals_1.ipynb
LangGraph-Exercises/reflection-agents/: pyproject.toml
LangGraph-Exercises/reflexion-agents/: pyproject.toml  reflexion_agents_notes.ipynb
RAG-On-PDFs/: main_requirements.txt
